welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
		else if (speed >= 66 && speed <= 86)
                     ^caughtSpeeding:2: error: type mismatch;
 found   : Unit
 required: Int
	if (isBirthday)
        ^