welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (isBirthday)
	{
		if (speed < 66)
		{
			return 0
		}
		else if (speed >= 66 && speed <= 86)
		{
			return 1
		}
	}
}
